force-app/main/default/objects/Mat_Talento_de_oportunidad__c/Mat_Talento_de_oportunidad__c.object-meta.xml
<CustomObject>
    <label>Talento de oportunidad</label>
    <nameField>
        <label>Talento de oportunidad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talento de oportunidad</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>