force-app/main/default/objects/Mat_Talento_de_oportunidad__c/fields/Mat_Estado__c.field-meta.xml
<CustomField>
    <fullName>Mat_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>