force-app/main/default/objects/Mat_Talento_de_oportunidad__c/fields/Mat_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Mat_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Talento de oportunidad</relationshipLabel>
    <relationshipName>Talento_de_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>