force-app/main/default/objects/Mat_Talento_de_oportunidad__c/fields/Talento__c.field-meta.xml
<CustomField>
    <fullName>Talento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talento</label>
    <referenceTo>Mat_Talentos__c</referenceTo>
    <relationshipLabel>Talento de oportunidad</relationshipLabel>
    <relationshipName>Talento_de_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>